[package]
name = "rust-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.33"
sha2 = "0.10.8"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
libp2p = { version = "0.53.2", features = ["tokio", "mdns"] }
tokio = { version = "1.36.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "time"] }
hex = "0.4.3"
once_cell = "1.19.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
